RESOLVED FIXED227726
_WKWebAuthenticationPanel is returning the wrong operation type in clientDataJSON
https://bugs.webkit.org/show_bug.cgi?id=227726
Summary _WKWebAuthenticationPanel is returning the wrong operation type in clientData...
Garrett Davidson
Reported 2021-07-06 15:17:44 PDT
_WKWebAuthenticationPanel is returning the wrong operation type in clientDataJSON
Attachments
Patch (2.14 KB, patch)
2021-07-06 15:19 PDT, Garrett Davidson
no flags
Patch (5.08 KB, patch)
2021-07-07 13:51 PDT, Garrett Davidson
no flags
Garrett Davidson
Comment 1 2021-07-06 15:19:22 PDT
Garrett Davidson
Comment 2 2021-07-06 15:19:24 PDT
Brent Fulgham
Comment 3 2021-07-06 15:37:27 PDT
Comment on attachment 432981 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=432981&action=review We should test that the clientDataJSON is returning the right thing. Could you add a TestWebKitAPI test to OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm that confirms that the JSON blob is right? > Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:526 > + auto clientDataJSON = produceClientDataJson(_WKWebAuthenticationTypeGet, challenge, origin); Oops!
Garrett Davidson
Comment 4 2021-07-07 13:51:15 PDT
Kate Cheney
Comment 5 2021-07-07 15:00:21 PDT
Comment on attachment 433069 [details] Patch r=me pending EWS
EWS
Comment 6 2021-07-08 10:13:46 PDT
Committed r279727 (239514@main): <https://commits.webkit.org/239514@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433069 [details].
Note You need to log in before you can comment on or make changes to this bug.