Source/WebKit: _WKWebAuthenticationPanel is returning the wrong operation type in clientDataJSON https://bugs.webkit.org/show_bug.cgi?id=227726 rdar://80073404

Patch by Garrett Davidson <garrett_davidson@apple.com> on 2021-07-08
Reviewed by Kate Cheney.

The -getAssertion:... method was passing the wrong _WKWebAuthenticationType to produceClientDataJSON().

* UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
(-[_WKWebAuthenticationPanel getAssertionWithChallenge:origin:options:completionHandler:]):

Tools:
Update the WebAuthenticationPanel.GetAssertionLA test to expect the right value
https://bugs.webkit.org/show_bug.cgi?id=227726
rdar://80073404

Patch by Garrett Davidson <garrett_davidson@apple.com> on 2021-07-08
Reviewed by Kate Cheney.

This test covers the changed code, but expects the wrong value. The existing
expectation was the base64 encoded string:

{"challenge":"AQIDBAECAwQBAgMEAQIDBAECAwQBAgMEAQIDBAECAwQ","origin":"","type":"webauthn.create"}

The "type" field is clearly incorrect here. Update the test to expect the right
value, and change the expectation to a plaintext string instead of base64 encoded,
to make issues like this easier to spot in the future.

While here, also remove an outdated comment.

* TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/239514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279727 268f45cc-cd09-0410-ab3c-d52691b4dbfc